@@ -120,7 +120,7 @@ sendto_schedule2(int sockfd, const void *buf, size_t len, int flags,
 	}
 
 	/* schedule */
-	if(gettimeofday(&tv, 0) < 0) {
+	if(upnp_gettimeofday(&tv) < 0) {
 		return -1;
 	}
 	/* allocate enough space for structure + buffers */
@@ -283,7 +283,7 @@ void finalize_sendto(void)
 	struct timeval timeout;
 	int max_fd;
 
-	if(gettimeofday(&deadline, NULL) < 0) {
+	if(upnp_gettimeofday(&deadline) < 0) {
 		syslog(LOG_ERR, "gettimeofday: %m");
 		return;
 	}
@@ -317,7 +317,7 @@ void finalize_sendto(void)
 			free(elt);
 		}
 		/* check deadline */
-		if(gettimeofday(&now, NULL) < 0) {
+		if(upnp_gettimeofday(&now) < 0) {
 			syslog(LOG_ERR, "gettimeofday: %m");
 			return;
 		}
